# ot-harjoitustyo

./: .gitignore  README.md
CourseTrackerApp/: .coverage  .coveragerc  .gitignore  pyproject.toml  tasks.py
CourseTrackerApp/data/: database.sqlite  database.sqlite-journal
CourseTrackerApp/dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
CourseTrackerApp/src/: config.py  database_connection.py  index.py  initialize_database.py
CourseTrackerApp/src/entities/: course.py  user.py
CourseTrackerApp/src/repositories/: course_repo.py  user_repo.py
CourseTrackerApp/src/services/: course_service.py
CourseTrackerApp/src/tests/: course_repo_test.py  course_service_test.py  user_repo_test.py
CourseTrackerApp/src/ui/: course_view.py  create_user_view.py  login_view.py  ui.py
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/htmlcov/: index.html  src_maksukortti_py.html  status.json
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: index.html  src_kassapaate_py.html  src_maksukortti_py.html  status.json
laskarit/viikko2/unicafe/src/tests/: .coverage  kassapaate_test.py  maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/htmlcov/: _Users_Juhki_Desktop_University_HY_Ohjelmistotekniikka_ot-harjoitustyo_laskarit_viikko2_unicafe_src_kassapaate_py.html  (+101 more)
