[tool.poetry]
name = "coursetrackerapp"
version = "0.1.0"
description = ""
authors = ["juhana-peltomaa <juhana.peltomaa@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.5.0"
python-dotenv = "^0.16.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"
pylint = "^2.7.2"
autopep8 = "^1.5.6"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
